--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 # [Info] 基本信息
 site_name: My Website # 左上角标题
-site_url: https://gis-xh.github.io/mkdocs-site
+site_url: https://logan14925.github.io/gh_page/
 site_author: xjc
 site_description: 基于 mkdocs-material 的静态网站模板
 
