--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,7 @@
 # [Info] 基本信息
-site_name: My Website # 左上角标题
+site_name: Xuejiacheng's Personal Website # 左上角标题
 site_url: http://127.0.0.1:8000/mkdocs-site/
 site_author: xjc
-site_description: 基于 mkdocs-material 的静态网站模板
 
 theme:
   name: 'material'
