--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ site_url: http://127.0.0.1:8000/mkdocs-site/
 site_author: xjc
 
 theme:
-  name: 'material'
+  name: material
   font:
     text: Merriweather Sans
     code: Red Hat Mono
