--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,6 +45,6 @@ markdown_extensions:
       alternate_style: true
   - admonition
   - pymdownx.details
-use_directory_urls: false
+use_directory_urls: true
 extra_css:
   - stylesheets/extra.css
